# soundstretch-web

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asset-manifest.json  bpm-count-processor.js  index.html  package.json  rubberband-realtime-processor.js  rubberband-realtime-processor.js.LICENSE.txt  rubberband-source-processor.js  rubberband.js  soundstretch-processor.js  soundstretch.worker.js  soundtouch.js  tsconfig.json  wasm.js  webpack.config.cjs
.github/workflows/: publish.yml
app/: .gitignore  package-lock.json  package.json
app/public/: bpm-count-processor.js  bpm-count-processor.js.LICENSE.txt  rubberband-realtime-processor.js  rubberband-source-processor.js  rubberband.js  soundstretch-processor.js  soundstretch-processor.js.LICENSE.txt  soundstretch.worker.js  soundtouch.js  wasm.js
app/src/: App.css  App.tsx  Float32ChannelTransport.ts  PlayOverlay.tsx  SharedAudioBuffer.ts  Test.tsx  Wavesurfer.css  Wavesurfer.tsx  useAudioFileChooser.tsx  usePlayer.tsx  useTest.tsx  util.ts
app/src/wavedraw/: ReactWaveDraw.css  ReactWaveDraw.tsx  WaveDraw.ts  config.ts
example/: index.html
experiments/: sample-rate.html
experiments/sample-rate-ios-app/: package-lock.json  package.json  tsconfig.json
experiments/sample-rate-ios-app/src/: App.css  App.tsx  Test.css  Test.tsx  getAudioContextFromTone.ts
src/web/: AudioBufferTransport.ts  BPMCounterNode.ts  Beat.ts  ChannelTransport.ts  Float32ChannelTransport.ts  RubberBandModule.ts  RubberBandRealtimeNode.ts  RubberBandSourceNode.ts  SoundStretchModule.ts  SoundStretchNode.ts  SoundStretchWorker.ts  SoundTouchModule.ts  createBPMCounterNode.ts  createBPMCounterNodeForTone.ts  createRubberBandNode.ts  createRubberBandNodeForTone.ts  createRubberBandRealtimeNode.ts  createRubberBandSourceNode.ts  createSoundStretchNode.ts  createSoundStretchNodeForTone.ts  createSoundStretchWorker.ts  index.ts  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.esm5.json  tsconfig.types.json
src/web/util/: cloneArrayBuffer.ts  convertToAudioBufferSourceNode.ts  convertToBufferSourceNode.ts
src/worker/: soundstretch.worker.ts  tsconfig.json
src/worklet/: bpm-count-processor.ts  index.ts  rubberband-realtime-processor.ts  rubberband-source-processor.ts  soundstretch-processor.ts  soundtouch-processor.ts  tsconfig.json
src/worklet/classes/: BPMCounter.ts  HeapArray.ts  SoundStretch.ts  SoundTouch.ts
static/css/: main.2065a40c.css  main.2065a40c.css.map  main.6b27027a.css  main.6b27027a.css.map  main.8bbd754f.css  main.8bbd754f.css.map  main.aa20a7fb.css  main.aa20a7fb.css.map  main.f0db3e93.css  main.f0db3e93.css.map  main.fc36d3c0.css  main.fc36d3c0.css.map  main.fd7082f2.css  main.fd7082f2.css.map
static/js/: main.106cb2b7.js  main.106cb2b7.js.map  main.1a84dcc0.js  main.1a84dcc0.js.map  main.1c4af7bf.js  main.1c4af7bf.js.map  main.21ba1409.js  main.21ba1409.js.map  main.281ae8ab.js  main.281ae8ab.js.map  main.2c1f45e2.js  main.2c1f45e2.js.map  main.38653c74.js  main.38653c74.js.map  main.6a8fcf31.js  main.6a8fcf31.js.map  main.6febd104.js  main.6febd104.js.LICENSE.txt  main.6febd104.js.map  main.802e7328.js  main.802e7328.js.map  main.8d963838.js  main.8d963838.js.map  main.991c366f.js  main.991c366f.js.map  main.b1d08bec.js  main.b1d08bec.js.map  main.b5434f21.js  main.b5434f21.js.map  main.be2de7d9.js  main.be2de7d9.js.map  main.cbd85403.js  main.cbd85403.js.map  main.e27e564e.js  main.e27e564e.js.LICENSE.txt  main.e27e564e.js.map  main.ea9d1d8e.js  main.ea9d1d8e.js.map  main.f1e12c0b.js  main.f1e12c0b.js.map  (+4 more)
wasm/: CMakeLists.txt  build.sh
wasm/cmake/module/: FindOpenMP.cmake
wasm/lib/: .gitignore  setup.sh
wasm/src/: BPMDetector.cpp  BPMDetector.h  ChannelBuffer.cpp  ChannelBuffer.h  ChannelTransport.cpp  ChannelTransport.h  EmbindSoundTouch.cpp  EmbindSoundTouch.h  OfflineRubberBand.cpp  OfflineRubberBand.h  RealtimeRubberBand.cpp  RealtimeRubberBand.h  RubberBandStretcher.cpp  RubberBandStretcher.h  SoundStretch.cpp  SoundStretch.h  Stretcher.cpp  Stretcher.h  Test.cpp  Test.h  bindings.cc  demo.cc  rubberband.cc  soundtouch.cc
